# go-cmake

./: CMakeLists.txt  README.md
cmake/: CMakeDetermineGoCompiler.cmake  CMakeGoCompiler.cmake  CMakeGoCompiler.cmake.in  CMakeGoInformation.cmake  CMakeTestGoCompiler.cmake  flags.cmake  golang.cmake
src/: CMakeLists.txt
