CMAKE_MINIMUM_REQUIRED(VERSION 3.2 FATAL_ERROR)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
SET(OUTPUT_DIR ${CMAKE_SOURCE_DIR}/target)
SET(OUTPUT_TOOL_DIR ${CMAKE_SOURCE_DIR}/bin)

SET(GOPATH "${CMAKE_SOURCE_DIR}")
SET(GO111MODULE "on")
MESSAGE("-> GOPATH=${GOPATH}")
MESSAGE("-> GO111MODULE=${GO111MODULE}")

INCLUDE(cmake/golang.cmake)
INCLUDE(cmake/flags.cmake)

PROJECT(DeepLens Go)

FILE(GLOB_RECURSE PROJECTS RELATIVE ${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/src/CMakeLists.txt)
FOREACH(PROJ ${PROJECTS})
  GET_FILENAME_COMPONENT(PROJ ${PROJ} DIRECTORY)
  MESSAGE("-> Find sub project in [${PROJ}]")
  ADD_SUBDIRECTORY(${PROJ})
ENDFOREACH()
